# fiops-XC

./: .gitignore  ciopt_report.html  pyproject.toml
.github/workflows/: test.yml
ciopt/: CMakeLists.txt  README.md
ciopt/examples/: main.c
ciopt/include/: ciopt.h
ciopt/src/: ciopt_analyzer.c  ciopt_core.c  ciopt_parser.c  ciopt_report.c  main.c
ciopt/tests/: test_basic.c  test_ciopt.c
tests/: test_api.py
