[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiops-complexity"
version = "0.1.0"
description = "FiOpt — AI-Powered Code Complexity & Optimization Engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ahamed faisal", email = "faisal.offl123@gmail.com"},
]
keywords = ["optimization", "complexity", "analysis", "profiler", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/ahamedfaisal-dot/fiops"
Repository = "https://github.com/ahamedfaisal-dot/fiops"
"Bug Tracker" = "https://github.com/ahamedfaisal-dot/fiops/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
fiopt = "fiopt.cli:main"

[tool.setuptools.packages.find]
include = ["fiopt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
